force-app/main/default/objects/LM_ProductLicensePurchaseCondition__c/LM_ProductLicensePurchaseCondition__c.object-meta.xml
<CustomObject>
    <description>As a Product License can have different purchase conditions depending on commercial negotiations, this object will keep a track of these conditions so final prices can be correctly calculated.</description>
    <label>Product License Purchase Condition</label>
    <nameField>
        <displayFormat>PLPCN-{0000}</displayFormat>
        <label>Product License Purchase Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product License Purchase Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>