force-app/main/default/objects/LM_ProductLicensePurchaseCondition__c/fields/BoardOfDirectors__c.field-meta.xml
<CustomField>
    <fullName>BoardOfDirectors__c</fullName>
    <description>Company board of directors associated with this purchase condition</description>
    <inlineHelpText>Company board of directors associated with this purchase condition</inlineHelpText>
    <label>Board of Directors</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>