force-app/main/default/objects/LM_ProductLicensePurchaseCondition__c/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <description>Date in which this purchase is not valid anymore</description>
    <inlineHelpText>Date in which this purchase is not valid anymore</inlineHelpText>
    <label>Contract End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>