force-app/main/default/objects/LM_ProductLicensePurchaseCondition__c/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <description>Start date when this purchase start to be valid</description>
    <inlineHelpText>Start date when this purchase start to be valid</inlineHelpText>
    <label>Contract Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>