force-app/main/default/objects/LM_ProductLicensePurchaseCondition__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>Domain of this purchase condition</description>
    <inlineHelpText>Domain of this purchase condition</inlineHelpText>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>