force-app/main/default/objects/LM_ProductLicensePurchaseCondition__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determine whether this purchase is still valid.</description>
    <inlineHelpText>Determine whether this purchase is still valid.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>