force-app/main/default/objects/LM_ProductLicensePurchaseCondition__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>What is the effective price of this purchase</description>
    <inlineHelpText>What is the effective price of this purchase</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>