force-app/main/default/objects/LM_ProductLicensePurchaseCondition__c/fields/ProductLicense__c.field-meta.xml
<CustomField>
    <fullName>ProductLicense__c</fullName>
    <description>Product License associated with this purchase condition</description>
    <inlineHelpText>What is the product license that you want to keep track of the purchase conditions</inlineHelpText>
    <label>Product License</label>
    <referenceTo>LM_ProductLicense__c</referenceTo>
    <relationshipLabel>Product License Purchase Conditions</relationshipLabel>
    <relationshipName>Product_License_Hiring_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>