force-app/main/default/objects/LM_ProductLicensePurchaseCondition__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Name of the project associated with this product license purchase</description>
    <inlineHelpText>Name of the project associated with this product license purchase</inlineHelpText>
    <label>Project</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>