force-app/main/default/objects/LM_ProductLicensePurchaseCondition__c/fields/PurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDate__c</fullName>
    <description>Date where the purchase of the product license took place</description>
    <inlineHelpText>Date where the purchase of the product license took place</inlineHelpText>
    <label>Purchase Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>