force-app/main/default/objects/LM_ProductLicensePurchaseCondition__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity of product licenses bought in this occasion.</description>
    <inlineHelpText>Quantity of product licenses bought in this occasion.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>