force-app/main/default/objects/LM_ProductLicensePurchaseCondition__c/fields/VicePresidency__c.field-meta.xml
<CustomField>
    <fullName>VicePresidency__c</fullName>
    <description
  >VP associated with the board of directors of this purchase condition.</description>
    <inlineHelpText
  >VP associated with the board of directors of this purchase condition.</inlineHelpText>
    <label>Vice Presidency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operações e Infraestrutura</fullName>
            </value>
            <value>
                <fullName>Estratégia e Inovação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>